Add back btn for EditPost

--- a/Tech/Shopper/app/src/main/res/layout/activity_shop_insight_sales.xml
+++ b/Tech/Shopper/app/src/main/res/layout/activity_shop_insight_sales.xml
@@ -13,11 +13,36 @@
         android:layout_marginVertical="20dp"
         android:layout_marginHorizontal="20dp">
 
-        <Spinner
-            android:id="@+id/shop_insight_sales_top_spinner"
+        <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="20dp"/>
+            android:text="Sales Earned"
+            android:textStyle="bold"
+            android:textColor="@color/colorMainColour"
+            android:fontFamily="@font/montserrat_bold"
+            android:textSize="20sp"
+            android:layout_marginBottom="10dp" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+
+            <TextView
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:text="Period:"
+                android:textColor="@color/colorBlack"
+                android:fontFamily="@font/montserrat"
+                android:layout_marginBottom="10dp" />
+
+            <Spinner
+                android:id="@+id/shop_insight_sales_top_spinner"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="20dp"/>
+        </LinearLayout>
 
         <com.jjoe64.graphview.GraphView
             android:layout_width="match_parent"
@@ -33,23 +58,71 @@
             android:layout_marginVertical="30dp"/>
 
 
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="20dp">
+            android:layout_marginBottom="20dp"
+            android:orientation="vertical">
 
-            <Spinner
-                android:id="@+id/shop_insight_sales_btm_start_spinner"
-                android:layout_width="150dp"
+            <TextView
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"/>
-            <Spinner
-                android:id="@+id/shop_insight_sales_btm_end_spinner"
-                android:layout_width="150dp"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"/>
+                android:text="Average Customer Sales"
+                android:textStyle="bold"
+                android:textColor="@color/colorMainColour"
+                android:fontFamily="@font/montserrat_bold"
+                android:textSize="20sp"
+                android:layout_marginBottom="10dp" />
 
-        </RelativeLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="150dp"
+                        android:layout_height="wrap_content"
+                        android:text="Start Time:"
+                        android:textColor="@color/colorBlack"
+                        android:fontFamily="@font/montserrat"
+                        android:layout_marginBottom="10dp" />
+
+                    <Spinner
+                        android:id="@+id/shop_insight_sales_btm_start_spinner"
+                        android:layout_width="150dp"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentLeft="true"/>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+
+                    <TextView
+                        android:layout_width="150dp"
+                        android:layout_height="wrap_content"
+                        android:text="End Time:"
+                        android:textColor="@color/colorBlack"
+                        android:fontFamily="@font/montserrat"
+                        android:layout_marginBottom="10dp" />
+
+                    <Spinner
+                        android:id="@+id/shop_insight_sales_btm_end_spinner"
+                        android:layout_width="150dp"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentRight="true"/>
+                </LinearLayout>
+
+            </LinearLayout>
+
+        </LinearLayout>
 
         <com.jjoe64.graphview.GraphView
             android:layout_width="match_parent"
