--- a/Tech/Shopper/app/src/main/res/layout/activity_notification_helper.xml
+++ b/Tech/Shopper/app/src/main/res/layout/activity_notification_helper.xml
@@ -25,6 +25,7 @@
             android:layout_height="wrap_content"
             android:text="Looking for..."
             android:ellipsize="end"
+            android:fontFamily="@font/open_sans"
             android:textSize="18sp"
             android:textColor="@color/colorBlack"/>
 
@@ -34,6 +35,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="dd/mm/yyyy, hh:mm am"
+            android:fontFamily="@font/open_sans"
+            android:textSize="15sp"
             android:textColor="@color/colorBlack"/>
 
 
