--- a/Tech/Shopper/app/src/main/res/layout/activity_profile_cplatform_view.xml
+++ b/Tech/Shopper/app/src/main/res/layout/activity_profile_cplatform_view.xml
@@ -45,8 +45,8 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:text="Collaboration Info:"
-                        android:textColor="@color/colorPrimary"
-                        android:fontFamily="@font/open_sans_extrabold"
+                        android:textColor="@color/colorMainColour"
+                        android:fontFamily="@font/montserrat_bold"
                         android:textSize="20sp"
                         android:layout_marginBottom="10dp"/>
 
@@ -76,10 +76,11 @@
                     android:orientation="horizontal">
 
                     <TextView
-                        android:layout_width="100dp"
+                        android:layout_width="110dp"
                         android:layout_height="wrap_content"
                         android:text="Title:"
-                        android:fontFamily="@font/monda_bold"/>
+                        android:fontFamily="@font/open_sans_bold"
+                        android:textSize="16sp"/>
 
 
                     <TextView
@@ -87,7 +88,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="1 For 1 Free..."
-                        android:fontFamily="@font/monda"
+                        android:fontFamily="@font/open_sans"
+                        android:textSize="16sp"
                         android:layout_marginStart="10dp"/>
 
                 </LinearLayout>
@@ -100,9 +102,10 @@
                     android:orientation="horizontal">
 
                     <TextView
-                        android:layout_width="100dp"
+                        android:layout_width="110dp"
                         android:layout_height="match_parent"
-                        android:fontFamily="@font/monda_bold"
+                        android:fontFamily="@font/open_sans_bold"
+                        android:textSize="16sp"
                         android:text="Description:" />
 
 
@@ -111,7 +114,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="1 For 1 Free..."
-                        android:fontFamily="@font/monda"
+                        android:fontFamily="@font/open_sans"
+                        android:textSize="16sp"
                         android:layout_marginStart="10dp"/>
                 </LinearLayout>
 
@@ -123,10 +127,11 @@
 
 
                     <TextView
-                        android:layout_width="100dp"
+                        android:layout_width="110dp"
                         android:layout_height="wrap_content"
                         android:text="Tags:"
-                        android:fontFamily="@font/monda_bold"/>
+                        android:fontFamily="@font/open_sans_bold"
+                        android:textSize="16sp"/>
 
 
                     <TextView
@@ -134,6 +139,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="10dp"
+                        android:fontFamily="@font/open_sans"
+                        android:textSize="16sp"
                         android:text="Sports"/>
                 </LinearLayout>
 
@@ -145,9 +152,10 @@
 
 
                     <TextView
-                        android:layout_width="100dp"
+                        android:layout_width="110dp"
                         android:layout_height="wrap_content"
-                        android:fontFamily="@font/monda_bold"
+                        android:fontFamily="@font/open_sans_bold"
+                        android:textSize="16sp"
                         android:text="Date Posted:"/>
 
 
@@ -156,6 +164,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="10dp"
+                        android:fontFamily="@font/open_sans"
+                        android:textSize="16sp"
                         android:text="dd/mm/yyyy"/>
                 </LinearLayout>
 
@@ -167,9 +177,10 @@
 
 
                     <TextView
-                        android:layout_width="100dp"
+                        android:layout_width="110dp"
                         android:layout_height="wrap_content"
-                        android:fontFamily="@font/monda_bold"
+                        android:fontFamily="@font/open_sans_bold"
+                        android:textSize="16sp"
                         android:text="Time Posted:"/>
 
 
@@ -178,6 +189,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="10dp"
+                        android:fontFamily="@font/open_sans"
+                        android:textSize="16sp"
                         android:text="hh:mm aa"/>
                 </LinearLayout>
             </LinearLayout>
@@ -211,9 +224,9 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Collab Requests:"
-                android:textColor="@color/colorPrimary"
-                android:fontFamily="@font/open_sans_extrabold"
+                android:text="Collaboration Requests:"
+                android:textColor="@color/colorMainColour"
+                android:fontFamily="@font/montserrat_bold"
                 android:textSize="20sp"
                 android:layout_marginBottom="10dp"/>
 
@@ -253,9 +266,9 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Collab Accepted:"
-                android:textColor="@color/colorPrimary"
-                android:fontFamily="@font/open_sans_extrabold"
+                android:text="Collaborations Accepted:"
+                android:textColor="@color/colorMainColour"
+                android:fontFamily="@font/montserrat_bold"
                 android:textSize="20sp"
                 android:layout_marginBottom="10dp"/>
 
