--- a/Tech/Shopper/app/src/main/res/layout/activity_profile_cplatform_view_helper.xml
+++ b/Tech/Shopper/app/src/main/res/layout/activity_profile_cplatform_view_helper.xml
@@ -29,14 +29,16 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="StoreName"
-                android:fontFamily="@font/monda_bold"/>
+                android:fontFamily="@font/open_sans_bold"
+                android:textSize="18dp"/>
 
             <TextView
                 android:id="@+id/profile_cplatform_view_helper_storeTag_TV"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Collaboration for 1 on 1"
-                android:fontFamily="@font/monda"/>
+                android:fontFamily="@font/open_sans"
+                android:textSize="15dp"/>
 
         </LinearLayout>
 
