--- a/Tech/Shopper/app/src/main/res/layout/activity_profile_cpromotion_view.xml
+++ b/Tech/Shopper/app/src/main/res/layout/activity_profile_cpromotion_view.xml
@@ -48,8 +48,8 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:text="Promotion Info:"
-                        android:textColor="@color/colorPrimary"
-                        android:fontFamily="@font/open_sans_extrabold"
+                        android:textColor="@color/colorMainColour"
+                        android:fontFamily="@font/montserrat_bold"
                         android:textSize="20sp"
                         android:layout_marginBottom="10dp"/>
 
@@ -82,7 +82,8 @@
                         android:layout_width="180dp"
                         android:layout_height="wrap_content"
                         android:text="Title:"
-                        android:fontFamily="@font/monda_bold"/>
+                        android:fontFamily="@font/open_sans_bold"
+                        android:textSize="16sp"/>
 
 
                     <TextView
@@ -90,7 +91,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="1 For 1 Free..."
-                        android:fontFamily="@font/monda"
+                        android:fontFamily="@font/open_sans"
+                        android:textSize="16sp"
                         android:layout_marginStart="10dp"
                         android:layout_marginBottom="20dp"/>
                 </LinearLayout>
@@ -106,7 +108,8 @@
                         android:layout_width="180dp"
                         android:layout_height="wrap_content"
                         android:text="Description:"
-                        android:fontFamily="@font/monda_bold"/>
+                        android:fontFamily="@font/open_sans_bold"
+                        android:textSize="16sp"/>
 
 
                     <TextView
@@ -114,7 +117,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="1 For 1 Free..."
-                        android:fontFamily="@font/monda"
+                        android:fontFamily="@font/open_sans"
+                        android:textSize="16sp"
                         android:layout_marginStart="10dp"
                         android:layout_marginBottom="20dp"/>
                 </LinearLayout>
@@ -131,7 +135,8 @@
                         android:layout_width="180dp"
                         android:layout_height="wrap_content"
                         android:text="Tags:"
-                        android:fontFamily="@font/monda_bold"/>
+                        android:fontFamily="@font/open_sans_bold"
+                        android:textSize="16sp"/>
 
 
                     <TextView
@@ -139,6 +144,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="10dp"
+                        android:fontFamily="@font/open_sans"
+                        android:textSize="16sp"
                         android:text="Sports"
                         android:layout_marginBottom="20dp"/>
                 </LinearLayout>
@@ -154,6 +161,8 @@
                     <TextView
                         android:layout_width="180dp"
                         android:layout_height="wrap_content"
+                        android:fontFamily="@font/open_sans_bold"
+                        android:textSize="16sp"
                         android:text="Promo Date:"/>
 
 
@@ -162,8 +171,10 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="dd/mm/yyyy - dd/mm/yyyy"
+                        android:fontFamily="@font/open_sans"
+                        android:textSize="16sp"
                         android:layout_marginStart="10dp"
-                        android:layout_marginBottom="20dp"/>
+                        android:layout_marginBottom="10dp"/>
                 </LinearLayout>
             </LinearLayout>
 
@@ -172,7 +183,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:background="@android:color/darker_gray"
-                android:layout_marginVertical="20dp"/>
+                android:layout_marginVertical="10dp"/>
 
 
             <!-- Parent: Images -->
@@ -189,9 +200,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Images:"
-                    android:textColor="@color/colorPrimary"
-                    android:fontFamily="@font/open_sans_extrabold"
-                    android:textSize="25sp"
+                    android:textColor="@color/colorMainColour"
+                    android:fontFamily="@font/montserrat_bold"
+                    android:textSize="20sp"
                     android:layout_marginBottom="10dp"/>
 
                 <!-- Images -->
