--- a/Tech/Shopper/app/src/main/res/layout/activity_register.xml
+++ b/Tech/Shopper/app/src/main/res/layout/activity_register.xml
@@ -26,7 +26,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_above="@+id/emailTIL"
-        android:fontFamily="@font/open_sans"
+        android:fontFamily="@font/open_sans_bold"
         android:text="xxx Mall"
         android:textSize="20sp" />
 
