--- a/Tech/Shopper/app/src/main/res/layout/custom_alert_dialog_collab_request.xml
+++ b/Tech/Shopper/app/src/main/res/layout/custom_alert_dialog_collab_request.xml
@@ -17,7 +17,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Request Sent!"
-            android:fontFamily="@font/open_sans_extrabold"
+            android:fontFamily="@font/montserrat_bold"
             android:gravity="center"
             android:textSize="30sp"
             android:textColor="@color/colorMainColour"
@@ -54,8 +54,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Details Of Collaborations:"
-                    android:textColor="@color/colorPrimary"
-                    android:fontFamily="@font/open_sans_extrabold"
+                    android:textColor="@color/colorMainColour"
+                    android:fontFamily="@font/open_sans_bold"
                     android:textSize="18sp"
                     android:layout_marginBottom="20dp"/>
 
@@ -70,7 +70,8 @@
                         android:layout_width="180dp"
                         android:layout_height="wrap_content"
                         android:text="Title:"
-                        android:fontFamily="@font/monda_bold"/>
+                        android:fontFamily="@font/open_sans_bold"
+                        android:textSize="16sp"/>
 
 
                     <TextView
@@ -78,7 +79,9 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="1 For 1 Free..."
-                        android:fontFamily="@font/monda"
+                        android:fontFamily="@font/open_sans"
+                        android:textSize="16sp"
+                        android:textColor="@color/colorBlack"
                         android:layout_marginStart="10dp"
                         android:layout_marginBottom="20dp"/>
 
@@ -95,7 +98,8 @@
                         android:layout_width="180dp"
                         android:layout_height="wrap_content"
                         android:text="Description:"
-                        android:fontFamily="@font/monda_bold"/>
+                        android:fontFamily="@font/open_sans_bold"
+                        android:textSize="16sp"/>
 
 
                     <TextView
@@ -103,7 +107,9 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="1 For 1 Free..."
-                        android:fontFamily="@font/monda"
+                        android:fontFamily="@font/open_sans"
+                        android:textSize="16sp"
+                        android:textColor="@color/colorBlack"
                         android:layout_marginStart="10dp"
                         android:layout_marginBottom="20dp"/>
                 </LinearLayout>
@@ -117,10 +123,11 @@
 
 
                     <TextView
-                        android:layout_width="180dp"
+                        android:layout_width="200dp"
                         android:layout_height="wrap_content"
                         android:text="Possible Collaborators:"
-                        android:fontFamily="@font/monda_bold"/>
+                        android:fontFamily="@font/open_sans_bold"
+                        android:textSize="16sp"/>
 
 
                     <TextView
@@ -129,6 +136,9 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="10dp"
                         android:text="Sports"
+                        android:fontFamily="@font/open_sans"
+                        android:textSize="16sp"
+                        android:textColor="@color/colorBlack"
                         android:layout_marginBottom="20dp"/>
                 </LinearLayout>
 
@@ -142,7 +152,8 @@
                     <TextView
                         android:layout_width="180dp"
                         android:layout_height="wrap_content"
-                        android:fontFamily="@font/monda_bold"
+                        android:fontFamily="@font/open_sans_bold"
+                        android:textSize="16sp"
                         android:text="Date Posted:"/>
 
 
@@ -152,6 +163,9 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="10dp"
                         android:text="dd/mm/yyyy"
+                        android:fontFamily="@font/open_sans"
+                        android:textSize="16sp"
+                        android:textColor="@color/colorBlack"
                         android:layout_marginBottom="20dp"/>
                 </LinearLayout>
 
@@ -165,7 +179,8 @@
                     <TextView
                         android:layout_width="180dp"
                         android:layout_height="wrap_content"
-                        android:fontFamily="@font/monda_bold"
+                        android:fontFamily="@font/open_sans_bold"
+                        android:textSize="16sp"
                         android:text="Time Posted:"/>
 
 
@@ -175,6 +190,9 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="10dp"
                         android:text="hh:mm aa"
+                        android:fontFamily="@font/open_sans"
+                        android:textSize="16sp"
+                        android:textColor="@color/colorBlack"
                         android:layout_marginBottom="20dp"/>
                 </LinearLayout>
             </LinearLayout>
