--- a/Tech/Shopper/app/src/main/res/values/preloaded_fonts.xml
+++ b/Tech/Shopper/app/src/main/res/values/preloaded_fonts.xml
@@ -3,6 +3,8 @@
     <array name="preloaded_fonts" translatable="false">
         <item>@font/cabin</item>
         <item>@font/cabin_semibold</item>
+        <item>@font/lemon</item>
+        <item>@font/lemonada_semibold</item>
         <item>@font/monda</item>
         <item>@font/monda_bold</item>
         <item>@font/montserrat</item>
