--- a/Tech/Shopper/app/src/main/res/layout/activity_profile_cpromotion_view.xml
+++ b/Tech/Shopper/app/src/main/res/layout/activity_profile_cpromotion_view.xml
@@ -14,7 +14,7 @@
         android:id="@+id/profile_promo_view_scroller"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/colorGrey">
+        android:background="@color/colorBackgroundColour">
 
         <!-- The top part -->
         <LinearLayout
