--- a/Tech/Shopper/app/src/main/res/layout/activity_register.xml
+++ b/Tech/Shopper/app/src/main/res/layout/activity_register.xml
@@ -6,7 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="20dp"
-    android:layout_marginTop="20dp">
+    android:layout_marginTop="20dp"
+    android:background="@color/colorBackgroundColour">
 
     <!-- Text: Register -->
     <TextView
