--- a/Tech/Shopper/app/src/main/res/layout/activity_notification_helper.xml
+++ b/Tech/Shopper/app/src/main/res/layout/activity_notification_helper.xml
@@ -11,13 +11,15 @@
     android:layout_marginHorizontal="3dp"
     app:contentPadding="5dp"
     android:id="@+id/notification_helper_cv"
+    android:background="@color/colorBackgroundColour"
     >
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_margin="3dp">
+        android:layout_margin="3dp"
+        >
 
         <TextView
             android:id="@+id/notification_helper_message_TV"
