--- a/Tech/Shopper/app/src/main/res/layout/activity_profile_cplatform_view_helper.xml
+++ b/Tech/Shopper/app/src/main/res/layout/activity_profile_cplatform_view_helper.xml
@@ -10,6 +10,7 @@
     app:cardBackgroundColor="@color/colorWhite"
     android:layout_marginHorizontal="3dp"
     app:contentPadding="5dp"
+    android:background="@color/colorBackgroundColour"
     >
 
     <LinearLayout
