--- a/Tech/Shopper/app/src/main/res/layout/fragment_chat_list.xml
+++ b/Tech/Shopper/app/src/main/res/layout/fragment_chat_list.xml
@@ -2,7 +2,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="Fragments.ChatListFragment">
+    tools:context="Fragments.ChatListFragment"
+    android:background="@color/colorBackgroundColour">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
