--- a/Tech/Shopper/app/src/main/res/layout/fragment_home.xml
+++ b/Tech/Shopper/app/src/main/res/layout/fragment_home.xml
@@ -6,7 +6,8 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".SelectMallActivity"
-    android:weightSum="10">
+    android:weightSum="10"
+    android:background="@color/colorBackgroundColour">
 
     <LinearLayout
         android:layout_width="match_parent"
