--- a/Tech/Shopper/app/src/main/res/layout/fragment_notification.xml
+++ b/Tech/Shopper/app/src/main/res/layout/fragment_notification.xml
@@ -2,7 +2,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="Fragments.NotificationFragment">
+    tools:context="Fragments.NotificationFragment"
+    android:background="@color/colorBackgroundColour">
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_margin="10dp"
