--- a/Tech/Shopper/app/src/main/res/values/preloaded_fonts.xml
+++ b/Tech/Shopper/app/src/main/res/values/preloaded_fonts.xml
@@ -4,6 +4,7 @@
         <item>@font/cabin</item>
         <item>@font/cabin_semibold</item>
         <item>@font/lemon</item>
+        <item>@font/lemonada_bold</item>
         <item>@font/lemonada_semibold</item>
         <item>@font/monda</item>
         <item>@font/monda_bold</item>
