--- a/Tech/Shopper/app/src/main/res/layout/activity_splash_screen.xml
+++ b/Tech/Shopper/app/src/main/res/layout/activity_splash_screen.xml
@@ -7,25 +7,27 @@
     tools:context=".SplashScreen"
     android:background="@color/colorMainColour">
 
+    <!-- Text: Let's Collab-->
+
     <ImageView
         android:id="@+id/ss_icon_IV"
-        android:layout_width="120dp"
-        android:layout_height="120dp"
-        android:src="@drawable/logo"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
-        />
+        android:layout_width="250dp"
+        android:layout_height="250dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerInParent="true"
+        android:layout_marginTop="190dp"
+        android:src="@mipmap/ic_logo" />
 
     <TextView
         android:id="@+id/ss_name_TV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/ss_icon_IV"
+        android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="0dp"
+        android:layout_marginBottom="230dp"
         android:fontFamily="@font/lemonada_semibold"
         android:text="Let's Collab"
         android:textColor="@color/colorWhite"
-        android:textSize="30sp"
+        android:textSize="35sp"
         android:textStyle="bold" />
 </RelativeLayout>
