--- a/Tech/Shopper/app/src/main/res/layout/activity_cpromotion_view.xml
+++ b/Tech/Shopper/app/src/main/res/layout/activity_cpromotion_view.xml
@@ -204,30 +204,13 @@
                 -->
             </LinearLayout>
 
-            <!-- Parent: QR Code -->
-            <LinearLayout
+
+            <!-- Divider -->
+            <View
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:padding="10dp">
-
-                <!-- Post Header -->
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="QR Code:"
-                    android:textColor="@color/colorMainColour"
-                    android:fontFamily="@font/montserrat_bold"
-                    android:textSize="20sp"
-                    android:layout_marginBottom="10dp"/>
-
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="300dp"
-                    android:src="@drawable/ic_add_image_black"/>
-
-            </LinearLayout>
-
+                android:layout_height="1dp"
+                android:background="@android:color/darker_gray"
+                android:layout_marginVertical="10dp"/>
 
             <!-- Parent: Store -->
             <LinearLayout
